Update dependencies + fixes